--- a/foreground/index.html
+++ b/foreground/index.html
@@ -1,74 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Noise Survey</title>
 </head>
 
 <body>
     <h2>Noise Survey Form</h2>
-    <form id="survey-form">
+    <form id="noiseForm">
         <label>Type of Place:
-            <input type="text" name="place_type" required />
+            <select id="place">
+                <option>Residential</option>
+                <option>Commercial</option>
+                <option>Industrial</option>
+                <option>Traffic</option>
+            </select>
         </label><br><br>
+
         <label>Time of Day:
-            <input type="text" name="time_of_day" required />
+            <select id="time">
+                <option>Morning</option>
+                <option>Afternoon</option>
+                <option>Evening</option>
+                <option>Night</option>
+            </select>
         </label><br><br>
-        <button type="button" onclick="startRecording()">Start 5s Recording</button>
-        <p id="status">Recording not started.</p>
-        <button type="submit">Submit</button>
+
+        <button type="button" onclick="recordAndSubmit()">Record and Submit</button>
     </form>
 
-    <script>
-        let audioBlob;
-        let latitude = null, longitude = null;
+    <p id="status"></p>
 
-        navigator.geolocation.getCurrentPosition(pos => {
-            latitude = pos.coords.latitude;
-            longitude = pos.coords.longitude;
-        });
-
-        async function startRecording() {
-            document.getElementById("status").textContent = "Recording...";
-
-            const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
-            const mediaRecorder = new MediaRecorder(stream);
-            const chunks = [];
-
-            mediaRecorder.ondataavailable = e => chunks.push(e.data);
-            mediaRecorder.onstop = async () => {
-                audioBlob = new Blob(chunks, { type: 'audio/webm' });
-                document.getElementById("status").textContent = "Recording complete.";
-            };
-
-            mediaRecorder.start();
-            setTimeout(() => mediaRecorder.stop(), 5000);
-        }
-
-        document.getElementById("survey-form").addEventListener("submit", async (e) => {
-            e.preventDefault();
-
-            if (!audioBlob || latitude === null || longitude === null) {
-                alert("Please record audio and allow location access first.");
-                return;
-            }
-
-            const formData = new FormData();
-            formData.append("place_type", e.target.place_type.value);
-            formData.append("time_of_day", e.target.time_of_day.value);
-            formData.append("latitude", latitude);
-            formData.append("longitude", longitude);
-            formData.append("audio", audioBlob);
-
-            const response = await fetch("https://your-render-url.onrender.com/record", {
-                method: "POST",
-                body: formData
-            });
-
-            const result = await response.json();
-            alert("Thank you for submitting!");
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
